# rag-handbook

./: CODE_REVIEW_AND_IMPROVEMENTS.md  CONTRIBUTING.MD  FAST_SETUP_WITH_UV.md  Questions about the project.docx  README.md  app.py  main.py
01_Simple_rag/: 04_Vector_Storage.md  06_Context_engineering.md  07_hybrid_rag.md
02_Advanced_rag/: all_about_advanced_rag.md
03_Hybrid_rag/: all_about_hybrid_rag.md
04_Context_engineering_and_context_assembly/: all_about_context_engineering.md
05_Corrective_rag/: all_about_corrective_rag.md
06_Self_rag/: all_about_self_rag.md
07_Adaptive_rag/: all_about_adaptive_rag.md
08_Branched_rag/: all_about_branched_rag.md
09_Modular_rag/: all_about_modular_rag.md
10_Graph_rag/: all_about_graph_rag.md
11_Simple_rag_with_memory/: all_about_small_rag.md
12_Agentic_rag/: all_about_agentic_rag.md
13_Multimodal_rag/: all_about_multimodal_rag.md
14_Speculative_rag/: all_about_speculative_rag.md
concepts/: 01_rag_basics.md  02_chunking_and_indexing.md  03_Embedding  03_vector_vs_vectorless.md  05_Evaluation.md  08_system_design.md  08_vector_vs_vectorless.md
patterns/finance_rag/: README.md  pyproject.toml  requirements.txt  test_qwen2_load.py
patterns/finance_rag/data/processed/: expense_policy.json  fpna_q4_board_pack.json  monthly_kpi_dashboard.json  walmart_2025_10k.json
patterns/finance_rag/docs/: SETUP.md  roadmap.md  system_design.md
patterns/finance_rag/index/chroma_db/50ca0514-99ae-4bdf-92ba-88da7107100f/: index_metadata.pickle
patterns/finance_rag/src/: answer.py  config.py  embed_index.py
(+13 files in other folders)
